--- a/main.html
+++ b/main.html
@@ -7,148 +7,77 @@
         input {
             background-color: azure;
         }
+        #welcome-message {
+            display: none;
+        }
     </style>
 </head>
 <body>
 
     <div id="main">
-        <h3>
-            Hola aplicación: {{ message }}
-        </h3>
+        <h3>Hola aplicación: {{ message }}</h3>
 
-        <button @click="count++" type="button">
-            Count is: {{ count }}
-        </button>
+        <div id="login-form" v-if="!isLoggedIn">
+            <form @submit.prevent="login">
+                <fieldset>
+                    <label>Escribe tu correo:</label>
+                    <input type="email" v-model="email" placeholder="Correo" required>
 
-        <br><br>
+                    <hr>
 
-        
-        <hr> 
+                    <label>Escribe tu Contraseña:</label>
+                    <input type="password" v-model="password" placeholder="Contraseña" required>
 
-        <form>
-            <input type="number" v-model="num1" placeholder="Número 1">
+                    <hr>
 
-            <br>
+                    <button type="submit">Acceder</button>
+                </fieldset>
+            </form>
+        </div>
 
-            <input type="number" v-model="num2" placeholder="Número 2">
-
-            <br>
-
-            <button @click.prevent="resultado = parseFloat(num1) + parseFloat(num2)" type="button">
-                Sumar
-            </button>
-
-        </form>
-
-        <label>
-            Resultado: {{ resultado }}
-        </label>
-
-        <hr>
-
-        <h1>
-            Apellido
-        </h1>
-         <ul>
-            <li v-for="Nombres in nCompleto" >
-                {{Nombres.Nombre}} {{Nombres.Apellido}}
-            </li>
-         </ul>
-
-         <hr>
-
-         <form> 
-            <fieldset>
-                <label for="nombre">Escribe tu nombre:</label>
-                <input type="text" v-model="sNombre" placeholder="Nombre">
-
-                <hr>
-
-                <label for="apellido">Escribe tu Apellido:</label>
-                <input type="text" v-model="sApellido" placeholder="Apellido">
-
-                <hr>
-
-                <button @click="subirNombre" type="button">
-                    Guardar
-                </button>
-
-            </fieldset>
-
-
-         </form>
+        <div id="welcome-message" v-if="isLoggedIn">
+            <h3>Bienvenidos {{ userEmail }}!</h3>
+        </div>
 
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-
     <script>
-        const { createApp, ref } = Vue
+        const { createApp } = Vue;
 
         createApp({
-            setup() {
-                const message = ref('hola app!')
-                const count = ref(0)
-                const name = ref('')
-                const resultado = ref(0)
-                const num1 = ref(0)
-                const num2 = ref(0)
-                let nCompleto = ref([
-                    {
-                        "Nombre": "Jose",
-                        "Apellido": "Perez"
-                    },
-                    {
-                        "Nombre": "Javier",
-                        "Apellido": "Lopez"
-                    },
-                    {
-                        "Nombre": "Joan",
-                        "Apellido": "Rodriguez"
-                    }
-                ])
-                let sNombre = ref("")
-                let sApellido = ref("")
-
-
+            data() {
                 return {
-                    message,
-                    count,
-                    name,
-                    resultado,
-                    num1,
-                    num2,
-                    nCompleto,
-                    sNombre,
-                    sApellido
-                }
-
+                    email: '',
+                    password: '',
+                    isLoggedIn: false,
+                    userEmail: '',
+                    message: 'Aplicación Vue'
+                };
             },
-
             methods: {
-                subirNombre(){
-                    let temporal = {
-                        "Nombre": this.sNombre,
-                        "Apellido": this.sApellido
-                    }
-                    this.nCompleto.push(temporal)
-                    this.sNombre=""
-                    this.sApellido=""
+                login() {
+                    fetch('users.json')
+                        .then(response => response.json())
+                        .then(users => {
+                            const user = users.find(u => u.email === this.email && u.password === this.password);
+                            if (user) {
+                                this.isLoggedIn = true; 
+                                this.userEmail = user.email; 
+                                console.log("Login exitoso:", this.userEmail); 
+                                console.log(this.isLoggedIn);
+                            } else {
+                                alert('Correo o contraseña incorrectos. Por favor, inténtalo de nuevo.');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error al cargar el archivo:', error);
+                            alert('Error al cargar los datos. Inténtalo más tarde.');
+                        });
                 }
             }
-
-        }).mount('#main')
+        }).mount('#main'); 
     </script>
 
 </body>
-
 </html>
-
-
-
-<label for="name_input">Escribe tu nombre:</label>
-        <input type="text" id="name_input" v-model="name" placeholder="Escribe aquí" name="name">
-
-        <br><br>
-
-        <label>Tu nombre es: <span id="span_name">{{ name }}</span></label>
