--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script>
-        const { createApp } = Vue;
+        const { createApp } = Vue; 
 
         createApp({
             data() {
@@ -94,7 +94,9 @@
                             if (user) {
                                 this.isLoggedIn = true;
                                 this.userEmail = user.email;
-                                console.log("Login exitoso:", this.userEmail);
+                                
+                                localStorage.setItem('isLoggedIn', 'true');
+                                localStorage.setItem('userEmail', this.userEmail);
 
                                 this.loadUsers();
                             } else {
@@ -115,7 +117,28 @@
                         .catch(error => {
                             console.error('Error al cargar los usuarios:', error);
                         });
+                },
+                checkLogin() {
+                    const storedLogin = localStorage.getItem('isLoggedIn');
+                    const storedEmail = localStorage.getItem('userEmail');
+
+                    if (storedLogin === 'true' && storedEmail) {
+                        this.isLoggedIn = true;
+                        this.userEmail = storedEmail;
+                        this.loadUsers(); 
+                    }
+                },
+                logout() {
+                    localStorage.removeItem('isLoggedIn');
+                    localStorage.removeItem('userEmail');
+                    this.isLoggedIn = false;
+                    this.email = '';
+                    this.password = '';
+                    this.users = [];
                 }
+            },
+            mounted() {
+                this.checkLogin();
             }
         }).mount('#main'); 
     </script>
